# NVIDIAMediaSDKSample

./: CMakeLists.txt  README.md
include/nvsdk/: dynlink_nvcuvid.h  nvUtils.h
src/: FrameQueue.cpp  FrameQueue.h  MediaDef.h  NvEncodeAPI.cpp  NvEncodeAPI.h  NvVideoDecoder.cpp  NvVideoDecoder.h  NvVideoEncoder.cpp  NvVideoEncoder.h  dynlink_nvcuvid.cpp
